Update Desktop CombatLogs styles
Update Desktop CombatLogs styles

--- a/src/CombatAnalysis.App/Styles/DataGridStyles.xaml
+++ b/src/CombatAnalysis.App/Styles/DataGridStyles.xaml
@@ -5,8 +5,8 @@
     <!--#region Data Grid #1 -->
     
     <Style x:Key="DataGridRowStyle1" TargetType="{x:Type DataGridRow}">
-        <Setter Property="Background" Value="#3A506B"/>
-        <Setter Property="Margin" Value="0 4 0 0"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Margin" Value="0 5 0 0"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="Validation.ErrorTemplate" Value="{x:Null}"/>
@@ -75,6 +75,7 @@
     <Style x:Key="DataGridCellStyle1" TargetType="{x:Type DataGridCell}">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Margin" Value="15 0"/>
         <Setter Property="Template">
