--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -124,6 +124,7 @@ $mobile-max-width: 425px;
     align-items: center;
     gap: 25px;
     padding: 0;
+    margin: 10px 0;
     margin-bottom: 110px;
 
     li {
