Fix Group and Personal chats Hub
Fix Group and Personal chats Hub

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -181,7 +181,7 @@ $mobile-max-width: 425px;
 
                     .chat-card {
                         display: flex;
-                        flex-direction: column;
+                        justify-content: space-around;
                         gap: 5px;
                         cursor: pointer;
 
